--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,18 @@
     width:100%;
     max-width: 1080px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
+
+#timer {
+    min-height: 50px;
+    min-width: 50px;
+    text-align: center;
+    font-size: 20px;
+}
+
+
