--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    min-height: 1000px;
 }
 
 
@@ -23,7 +24,14 @@
     min-height: 50px;
     min-width: 50px;
     text-align: center;
-    font-size: 20px;
+    font-size: 40px;
+    margin-bottom: 30px;
 }
 
+
+
+#numbers {
+    font-size: 40px;
+    margin-top: 30px;
+}
 
